--- a/cal.ui
+++ b/cal.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>588</width>
+    <width>417</width>
     <height>551</height>
    </rect>
   </property>
@@ -16,48 +16,46 @@
   <widget class="QLabel" name="title">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>90</x>
      <y>10</y>
-     <width>291</width>
+     <width>290</width>
      <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Noto Sans CJK HK</family>
      <pointsize>30</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
    <property name="text">
     <string>주차 요금 계산</string>
    </property>
   </widget>
-  <widget class="QLabel" name="chart">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>100</y>
-     <width>250</width>
-     <height>300</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../../../사진/chart.png</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QPushButton" name="find_btn">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>120</y>
+     <x>270</x>
+     <y>100</y>
      <width>89</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+QPushButton{
+	background-color: rgb(148, 198, 65);
+	color: rgb(255, 255, 255);
+	border-radius: 5px
+}
+QPushButton:hover{
+	
+	background-color: rgb(78, 154, 6);
+	border-radius: 5px
+
+}</string>
    </property>
    <property name="text">
     <string>조 회</string>
@@ -66,8 +64,8 @@
   <widget class="QLineEdit" name="plate_input">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>120</y>
+     <x>150</x>
+     <y>100</y>
      <width>113</width>
      <height>25</height>
     </rect>
@@ -76,8 +74,8 @@
   <widget class="QLabel" name="title_2">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>120</y>
+     <x>80</x>
+     <y>100</y>
      <width>61</width>
      <height>17</height>
     </rect>
@@ -89,8 +87,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>160</y>
+     <x>80</x>
+     <y>140</y>
      <width>201</width>
      <height>17</height>
     </rect>
@@ -102,8 +100,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>240</y>
+     <x>80</x>
+     <y>220</y>
      <width>201</width>
      <height>17</height>
     </rect>
@@ -115,8 +113,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>280</y>
+     <x>80</x>
+     <y>260</y>
      <width>201</width>
      <height>17</height>
     </rect>
@@ -128,8 +126,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>320</y>
+     <x>80</x>
+     <y>300</y>
      <width>211</width>
      <height>17</height>
     </rect>
@@ -141,8 +139,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>360</y>
+     <x>80</x>
+     <y>340</y>
      <width>211</width>
      <height>17</height>
     </rect>
@@ -154,8 +152,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>400</y>
+     <x>80</x>
+     <y>380</y>
      <width>211</width>
      <height>17</height>
     </rect>
@@ -167,11 +165,25 @@
   <widget class="QPushButton" name="out_btn">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>520</y>
+     <x>270</x>
+     <y>500</y>
      <width>89</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+QPushButton{
+	background-color: rgb(148, 198, 65);
+	color: rgb(255, 255, 255);
+	border-radius: 5px
+}
+QPushButton:hover{
+	
+	background-color: rgb(78, 154, 6);
+	border-radius: 5px
+
+}</string>
    </property>
    <property name="text">
     <string>나가기</string>
@@ -180,11 +192,25 @@
   <widget class="QPushButton" name="cal_btn">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>520</y>
+     <x>150</x>
+     <y>500</y>
      <width>89</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+QPushButton{
+	background-color: rgb(148, 198, 65);
+	color: rgb(255, 255, 255);
+	border-radius: 5px
+}
+QPushButton:hover{
+	
+	background-color: rgb(78, 154, 6);
+	border-radius: 5px
+
+}</string>
    </property>
    <property name="text">
     <string>계 산</string>
@@ -193,8 +219,8 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>300</x>
-     <y>200</y>
+     <x>80</x>
+     <y>180</y>
      <width>201</width>
      <height>17</height>
     </rect>
@@ -206,11 +232,25 @@
   <widget class="QPushButton" name="point_btn">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>440</y>
+     <x>270</x>
+     <y>420</y>
      <width>89</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+QPushButton{
+	background-color: rgb(148, 198, 65);
+	color: rgb(255, 255, 255);
+	border-radius: 5px
+}
+QPushButton:hover{
+	
+	background-color: rgb(78, 154, 6);
+	border-radius: 5px
+
+}</string>
    </property>
    <property name="text">
     <string>포인트 사용</string>
@@ -219,8 +259,8 @@
   <widget class="QLineEdit" name="point_input">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>440</y>
+     <x>150</x>
+     <y>420</y>
      <width>113</width>
      <height>25</height>
     </rect>
@@ -229,8 +269,8 @@
   <widget class="QLineEdit" name="phone_input">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>480</y>
+     <x>150</x>
+     <y>460</y>
      <width>113</width>
      <height>25</height>
     </rect>
@@ -239,11 +279,25 @@
   <widget class="QPushButton" name="take_btn">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>480</y>
+     <x>270</x>
+     <y>460</y>
      <width>89</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+QPushButton{
+	background-color: rgb(148, 198, 65);
+	color: rgb(255, 255, 255);
+	border-radius: 5px
+}
+QPushButton:hover{
+	
+	background-color: rgb(78, 154, 6);
+	border-radius: 5px
+
+}</string>
    </property>
    <property name="text">
     <string>포인트 적립</string>
@@ -252,8 +306,8 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>480</y>
+     <x>70</x>
+     <y>460</y>
      <width>81</width>
      <height>20</height>
     </rect>
