--- a/regist.ui
+++ b/regist.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>860</width>
-    <height>642</height>
+    <width>736</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,15 +16,18 @@
   <widget class="QLabel" name="title">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>0</y>
+     <x>250</x>
+     <y>10</y>
      <width>241</width>
-     <height>81</height>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Noto Sans CJK HK</family>
      <pointsize>30</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
    <property name="text">
@@ -34,9 +37,9 @@
   <widget class="QLineEdit" name="plate_txt">
    <property name="geometry">
     <rect>
-     <x>660</x>
+     <x>560</x>
      <y>450</y>
-     <width>171</width>
+     <width>150</width>
      <height>21</height>
     </rect>
    </property>
@@ -44,7 +47,7 @@
   <widget class="QLabel" name="plate_label">
    <property name="geometry">
     <rect>
-     <x>570</x>
+     <x>470</x>
      <y>450</y>
      <width>67</width>
      <height>17</height>
@@ -57,10 +60,10 @@
   <widget class="QLabel" name="start_label">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>80</x>
      <y>320</y>
-     <width>141</width>
-     <height>21</height>
+     <width>120</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -70,10 +73,10 @@
   <widget class="QLabel" name="end_label">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>600</y>
+     <x>80</x>
+     <y>570</y>
      <width>121</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -83,10 +86,10 @@
   <widget class="QCalendarWidget" name="start_date">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>30</x>
      <y>110</y>
-     <width>461</width>
-     <height>201</height>
+     <width>410</width>
+     <height>200</height>
     </rect>
    </property>
    <property name="acceptDrops">
@@ -99,19 +102,19 @@
   <widget class="QLineEdit" name="start_txt">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>230</x>
      <y>320</y>
-     <width>171</width>
-     <height>21</height>
+     <width>170</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
   <widget class="QLineEdit" name="end_txt">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>600</y>
-     <width>171</width>
+     <x>230</x>
+     <y>570</y>
+     <width>170</width>
      <height>21</height>
     </rect>
    </property>
@@ -119,11 +122,25 @@
   <widget class="QPushButton" name="register_btn">
    <property name="geometry">
     <rect>
-     <x>590</x>
-     <y>550</y>
-     <width>89</width>
+     <x>470</x>
+     <y>530</y>
+     <width>241</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+QPushButton{
+	background-color: rgb(148, 198, 65);
+	color: rgb(255, 255, 255);
+	border-radius: 5px
+}
+QPushButton:hover{
+	
+	background-color: rgb(78, 154, 6);
+	border-radius: 5px
+
+}</string>
    </property>
    <property name="text">
     <string>등록</string>
@@ -132,10 +149,10 @@
   <widget class="QCalendarWidget" name="end_date">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>380</y>
-     <width>461</width>
-     <height>201</height>
+     <x>30</x>
+     <y>350</y>
+     <width>410</width>
+     <height>200</height>
     </rect>
    </property>
    <property name="verticalHeaderFormat">
@@ -145,33 +162,34 @@
   <widget class="QPushButton" name="exit_btn">
    <property name="geometry">
     <rect>
-     <x>700</x>
-     <y>550</y>
-     <width>89</width>
+     <x>470</x>
+     <y>570</y>
+     <width>241</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">
+QPushButton{
+	background-color: rgb(148, 198, 65);
+	color: rgb(255, 255, 255);
+	border-radius: 5px
+}
+QPushButton:hover{
+	
+	background-color: rgb(78, 154, 6);
+	border-radius: 5px
+
+}</string>
    </property>
    <property name="text">
     <string>나가기</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="edit_btn">
-   <property name="geometry">
-    <rect>
-     <x>590</x>
-     <y>550</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>등록</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="phone_label">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>460</x>
      <y>490</y>
      <width>91</width>
      <height>20</height>
@@ -184,11 +202,65 @@
   <widget class="QLineEdit" name="phone_txt">
    <property name="geometry">
     <rect>
-     <x>660</x>
+     <x>560</x>
      <y>490</y>
-     <width>171</width>
+     <width>150</width>
      <height>21</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>110</y>
+     <width>261</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>정기 주차 등록 시 </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>160</y>
+     <width>261</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>1.주차 가격 10% 할인!</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>470</x>
+     <y>210</y>
+     <width>261</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>2.계산은 마지막날 한번에!</string>
    </property>
   </widget>
  </widget>
